@@ -14,61 +14,82 @@ import java.nio.file.StandardOpenOption;
 class App {
 
     // BEGIN
-    public static CompletableFuture<String> unionFiles(String path1, String path2, String resultPath) {
+    private static Path getFullPath(String filePath) {
+        return Paths.get(filePath).toAbsolutePath().normalize();
+    }
+    public static CompletableFuture<String> unionFiles(String source1, String source2, String dest) {
 
-        try {
-            Files.exists(Path.of(path1));
-        } catch (IllegalStateException ex) {
-            System.out.println(ex.getMessage());
-        }
-        try {
-            Files.exists(Path.of(path2));
-        } catch (IllegalStateException ex) {
-            System.out.println(ex.getMessage());
-        }
+        CompletableFuture<String> content1 = CompletableFuture.supplyAsync(() -> {
+            String content = "";
 
-
-        CompletableFuture<String> readFirstFile = CompletableFuture.supplyAsync(() -> {
             try {
-                return Files.readString(Path.of(path1));
+                content = Files.readString(getFullPath(source1));
             } catch (Exception e) {
-                throw new IllegalStateException(e);
+                throw new RuntimeException(e);
             }
+            return content;
         });
 
-        CompletableFuture<String> readSecondFile = CompletableFuture.supplyAsync(() -> {
+        CompletableFuture<String> content2 = CompletableFuture.supplyAsync(() -> {
+
+            String content = "";
             try {
-                 return Files.readString(Path.of(path2));
+                content = Files.readString(getFullPath(source2));
             } catch (Exception e) {
-                throw new IllegalStateException(e);
+                throw new RuntimeException(e);
             }
+            return content;
         });
 
 
-        return readFirstFile.thenCombine(readSecondFile, (first, second) -> {
-            String resultString  = first + second;
+        return content1.thenCombine(content2, (cont1, cont2) -> {
+            String union = cont1 + cont2;
             try {
-                Files.write(Path.of(resultPath), resultString.getBytes());
-                System.out.println("Строка успешно записана в файл: " + resultPath);
-            } catch (IOException e) {
-                System.out.println("Произошла ошибка при записи в файл: " + e.getMessage());
+                Files.writeString(getFullPath(dest), union, StandardOpenOption.CREATE);
+            } catch (Exception e) {
+                throw new RuntimeException(e);
             }
-            // Обработка исключений
-            // Если при работе задач возникли исключения
-            // их можно обработать в методе exceptionally
-            return resultString;
+            return "ok!";
+
         }).exceptionally(ex -> {
             System.out.println("Oops! We have an exception - " + ex.getMessage());
-            return null;
+            return "Unknown!";
         });
+    }
+
+    public static CompletableFuture<Long> getDirectorySize(String path) {
+
+        var directory = new File(path);
+
+        if (!directory.isDirectory()) {
+            return CompletableFuture.completedFuture(0L);
+        }
+
+        File[] files = directory.listFiles();
+
+        CompletableFuture<Long>[] fileSizes = Arrays.stream(files)
+                .filter(File::isFile)
+                .map(file -> CompletableFuture.supplyAsync(() -> file.length()))
+                .toArray(CompletableFuture[]::new);
+
+        return CompletableFuture.allOf(fileSizes)
+                .thenApply(v -> Arrays.stream(fileSizes)
+                        .mapToLong(CompletableFuture::join)
+                        .sum());
     }
     // END
 
     public static void main(String[] args) throws Exception {
         // BEGIN
-        CompletableFuture<String> result = App.unionFiles("file1.txt", "file2.txt", "dest.txt");
-        System.out.println(result);
-
+        CompletableFuture<String> result = unionFiles(
+                "src/main/resources/file1.txt",
+                "src/main/resources/file2.txt",
+                "src/main/resources/dest.txt"
+        );
+        CompletableFuture<Long> size = getDirectorySize("src/main/resources");
+        result.get();
+        System.out.println("done!");
+        System.out.println(size.get());
         // END
     }
 }
